<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".IngredientsActionActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="109dp"
        android:layout_height="53dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/textfield"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:shadowColor="#eeeeee"
        android:elevation="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_analyze"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outline_button"
        android:textAllCaps="false"
        android:text="@string/analyze"
        android:textColor="#F2B2F0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ingredients" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_more"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_more_description"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/pink_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_analyze" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scan_again"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outline_button"
        android:text="@string/scan_again"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="#F2B2F0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_more" />

</androidx.constraintlayout.widget.ConstraintLayout>